Fix #36356: faces not drawn with constructive modifier + dynamic paint, where it overrides material colors with dynamic paint colors.